Regression: OptiX denoising artifacts at high sample counts in specific scenes. #93029

Closed
opened 2021-11-12 08:14:42 +01:00 by Alaska · 8 comments
Member

System Information
Operating system: Linux-5.14.0-4-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44

Blender Version
Broken version: 3.1.0 Alpha, branch: master, commit date: 2021-11-12 03:57, hash: 1e1c870001 and presumably Blender 3.0
Worked: Prior to 440a3475b8

Short description of error
When rendering with a high sample count with the Albedo auxiliary pass enabled in specific scenes, some artifacts can occur. This issue was introduced by 440a3475b8 based on my bisecting. Here are some images showing what it looks like:

 Old artifact free.png New denoising artifacts.png
Prior to 440a3475b8 After 440a3475b8

Exact steps for others to reproduce the error
OptiX denoising artifacts at high sample counts.blend

Option 1:

  1. Download the attached scene and render the scene with a OptiX denoiser compatible device. (Either viewport rendering or final render works). If you use viewport rendering, you will notice the artifacts start to appear at high sample counts. With Adaptive Sampling on the issue doesn't appear to occur due to low sample counts.

Option 2:

  1. Create a new .blend file and change the render engine to Cycles.
  2. Disable Adaptive Sampling and enable the OptiX denoiser with the Albedo auxiliary pass in the relevant rendering mode (viewport or final render). It's important to disable the Adaptive Sampling here as this issue only appears to occur at high sample counts which Adaptive Sampling doesn't allow in simple scenes.
  3. Change the World background to a Sky Texture.
  4. Place the camera/view underneath the default cube and look up at it. Render the scene and once you reach a high sample count the issue will start to appear. It starts to appear at 1024 samples for me, but gets significantly more noticeable up to 4096 samples.
**System Information** Operating system: Linux-5.14.0-4-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 **Blender Version** Broken version: 3.1.0 Alpha, branch: master, commit date: 2021-11-12 03:57, hash: `1e1c870001` and presumably Blender 3.0 Worked: Prior to 440a3475b8 **Short description of error** When rendering with a high sample count with the `Albedo` auxiliary pass enabled in specific scenes, some artifacts can occur. This issue was introduced by 440a3475b8 based on my bisecting. Here are some images showing what it looks like: |![ Old artifact free.png](https://archive.blender.org/developer/F11795946/_Old_artifact_free.png)|![New denoising artifacts.png](https://archive.blender.org/developer/F11795948/New_denoising_artifacts.png)| | -- | -- | |Prior to `440a3475b8`|After `440a3475b8`| **Exact steps for others to reproduce the error** [OptiX denoising artifacts at high sample counts.blend](https://archive.blender.org/developer/F11795965/OptiX_denoising_artifacts_at_high_sample_counts.blend) Option 1: 1. Download the attached scene and render the scene with a OptiX denoiser compatible device. (Either viewport rendering or final render works). If you use viewport rendering, you will notice the artifacts start to appear at high sample counts. With `Adaptive Sampling` on the issue doesn't appear to occur due to low sample counts. Option 2: 1. Create a new .blend file and change the render engine to Cycles. 2. Disable `Adaptive Sampling` and enable the OptiX denoiser with the `Albedo` auxiliary pass in the relevant rendering mode (viewport or final render). It's important to disable the `Adaptive Sampling` here as this issue only appears to occur at high sample counts which `Adaptive Sampling` doesn't allow in simple scenes. 3. Change the `World background` to a `Sky Texture`. 4. Place the camera/view underneath the default cube and look up at it. Render the scene and once you reach a high sample count the issue will start to appear. It starts to appear at 1024 samples for me, but gets significantly more noticeable up to 4096 samples.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv
Author
Member

CC @pmoursnv as the culprit commit was made by you.

I will test Nvidia driver 470.X later just in case that makes a difference.

CC @pmoursnv as the culprit commit was made by you. I will test Nvidia driver 470.X later just in case that makes a difference.
Author
Member

Downgrading to driver version 470.63.01 didn't resolve this issue.

Downgrading to driver version 470.63.01 didn't resolve this issue.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/cycles@af9b75b1b4

This issue was referenced by blender/cycles@af9b75b1b4a0371c6839e50072a4b05740cd0ce8

This issue was referenced by 9d0d4b8601

This issue was referenced by 9d0d4b8601dfb9de335dd7af32562cbfb94238a6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Patrick Mours self-assigned this 2021-11-12 19:00:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93029
No description provided.